Make the default for "submit" Bug 59035 r=kmcclusk sr=attinasi